@- Fixed bug #17448 (Print the message when OCI_SUCCESS_WITH_INFO is returned). (Maxim)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@113611 c90b9560-bf6c-de11-be94-00142212c4b1