ext/oci8/oci8.c
@@ -974,7 +974,16 @@ oci_error(OCIError *err_p, char *what, sword status)
 	case OCI_SUCCESS:
 		break;
 	case OCI_SUCCESS_WITH_INFO:
-		php_error_docref(NULL TSRMLS_CC, E_WARNING, "%s: OCI_SUCCESS_WITH_INFO", what);
+		CALL_OCI(OCIErrorGet(
+				err_p, 
+				(ub4)1, 
+				NULL, 
+				&errcode, 
+				errbuf,
+				(ub4)sizeof(errbuf), 
+				(ub4)OCI_HTYPE_ERROR));
+
+		php_error_docref(NULL TSRMLS_CC, E_WARNING, "%s: OCI_SUCCESS_WITH_INFO: %s", what, errbuf);
 		break;
 	case OCI_NEED_DATA:
 		php_error_docref(NULL TSRMLS_CC, E_WARNING, "%s: OCI_NEED_DATA", what);
